# revtag

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/lib/: mod.rs
tests/: expected_rev_bc.sam  expected_rev_qt.sam  expected_revcomp_bc.sam  input.sam  integration_test.rs
